# biblatex-experimental

./: .gitignore  Cargo.toml  README.md
benches/: biber_papers.rs
resources/test/: default-datamodel.bcf
src/: bcf.rs  bibtex.rs  lib.rs
src/bibtex/: mod.rs  parse.rs  tests.rs
