[package]
name = "biblatex"
version = "0.1.0"
edition = "2021"

[dependencies]
unicode-normalization = "0.1"
unicode-ident = "1.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.23", features = ["serialize"] }

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "biber_papers"
harness = false